      From the Header's menu, access to:
        Settings
        Quick Reply shortcut
        Image Expansion
      Can be auto-hidden.
    Egocentrism:
      "(You)" will be added to quotes linking to your posts.
      The Unread tab icon will indicate new unread posts quoting you with an exclamation mark.
      Delete links in the post menu will only appear for your posts.

  QR changes:
    Clicking the submit button while uploading will abort the upload and won't start re-uploading automatically anymore.
    Creating threads outside of the index is now possible.
    Selection-to-quote also applies to selected text inside the post, not just inside the comment.
    Quoting the OP will not insert the >>opnumber anymore unless the QR was already opened.
    Added thumbnailing support for Opera.

  Image Expansion changes:
    Expanding OP images won't squish replies anymore.
    There is now a setting to allow expanding spoilers.

  Thread Updater changes:
    The Thread Updater will now notify of sticky/closed status change and update the icons.
    The Thread Updater will pause when offline, and resume when online.
    Added an option to always auto-scroll to the bottom.

  Unread posts changes:
    Read posts won't be marked as unread after reloading a thread.
    Visible posts will not be taken into account towards the unread count.

  Thread Stats changes:
    Post and file count will now adjust with deleted posts.
    The file count will not go red anymore when the thread is a sticky.

  Thread/Post Hiding changes:
    Added Thread & Post Hiding in the Menu, with individual settings.
    Thread & Post Hiding Buttons can now be disabled in the settings.
    Recursive Hiding will be automatically applied when manually hiding a post.

  Added touch and multi-touch support for dragging windows.
  Added [math] tags keybind.
  Fix Chrome's install warning saying that 4chan X would execute on all domains.
  Fix Quote Backlinks not affecting inlined quotes.