@@ -16,7 +16,9 @@ beta
       Delete links in the post menu will only appear for your posts.
 
   QR changes:
+    Cooldown start time is now more accurate, which means shorter cooldown period and faster auto-posting.
     Clicking the submit button while uploading will abort the upload and won't start re-uploading automatically anymore.
+    Closing the QR while uploading will abort the upload and won't close the QR anymore.
     Creating threads outside of the index is now possible.
     Selection-to-quote also applies to selected text inside the post, not just inside the comment.
     Quoting the OP will not insert the >>opnumber anymore unless the QR was already opened.
